--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "test": "jest --coverage",
         "storybook": "start-storybook -p 9001 -c .storybook",
+        "build:storybook": "build-storybook -c .storybook -o /docs",
         "prepublish": "yarn test"
     },
     "repository": {
