--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "jsnext:main": "src/index.js",
     "scripts": {
         "test": "jest --coverage",
+        "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+        "prebuild:storybook": "yarn run test:generate-output",
         "storybook": "start-storybook -p 9001 -c .storybook",
         "build:storybook": "build-storybook -c .storybook -o /docs -s ./src/fonts",
         "prepublish": "yarn test"
@@ -27,16 +29,23 @@
     "homepage": "https://github.com/equinor/fusion-components#readme",
     "devDependencies": {
         "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.2.3",
         "@babel/preset-env": "^7.2.3",
+        "@babel/preset-react": "^7.0.0",
         "@storybook/addon-actions": "^4.1.7",
         "@storybook/addon-info": "^4.1.7",
+        "@storybook/addon-jest": "^4.1.7",
         "@storybook/addon-options": "^4.1.7",
         "@storybook/addon-storyshots": "^4.1.6",
         "@storybook/react": "^4.1.6",
+        "babel-core": "7.0.0-bridge.0",
+        "babel-jest": "^23.6.0",
         "babel-loader": "^8.0.5",
+        "babel-plugin-require-context-hook": "^1.0.0",
         "classnames": "^2.2.6",
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^23.6.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
@@ -52,5 +61,8 @@
     },
     "peerDependencies": {
         "react": "^16.7.0"
+    },
+    "resolutions": {
+        "babel-core": "7.0.0-bridge.0"
     }
 }
