--- a/package.json
+++ b/package.json
@@ -36,10 +36,18 @@
         "babel-loader": "^8.0.5",
         "classnames": "^2.2.6",
         "css-loader": "^2.1.0",
+        "eslint": "5.3.0",
+        "eslint-config-airbnb": "17.1.0",
+        "eslint-loader": "^2.1.1",
+        "eslint-plugin-import": "2.14.0",
+        "eslint-plugin-jsx-a11y": "6.1.1",
+        "eslint-plugin-react": "7.11.0",
         "file-loader": "^3.0.1",
         "jest": "^23.6.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
+        "prettier": "^1.16.0",
+        "prettier-loader": "^2.1.1",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
@@ -52,5 +60,6 @@
     },
     "peerDependencies": {
         "react": "^16.7.0"
-    }
+    },
+    "dependencies": {}
 }
