Set up screenshot testing

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "main": "dist/index.js",
     "jsnext:main": "src/index.js",
     "scripts": {
-        "test": "jest --coverage",
-        "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+        "test": "start-server-and-test storybook-ci http-get://localhost:9002 jest:integration",
+        "jest": "jest --coverage",
+        "jest:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+        "jest:integration": "jest -c jest.config.integration.js --coverage --json --outputFile=.jest-test-results.json || true",
         "prebuild:storybook": "yarn run test:generate-output",
         "storybook": "start-storybook -p 9001 -c .storybook",
+        "storybook-ci": "start-storybook -p 9002 -c .storybook-integration --ci",
         "build:storybook": "build-storybook -c .storybook -o /docs -s ./src/fonts",
         "prepublish": "yarn test"
     },
@@ -45,14 +48,19 @@
         "classnames": "^2.2.6",
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
+        "global": "^4.3.2",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^23.6.0",
+        "jest-image-snapshot": "^2.7.0",
+        "jest-puppeteer": "^3.8.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "prop-types": "^15.6.2",
+        "puppeteer": "^1.11.0",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-test-renderer": "^16.7.0",
+        "start-server-and-test": "^1.7.11",
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.28.4",
