--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@storybook/addon-actions": "^4.1.7",
         "@storybook/addon-info": "^4.1.7",
         "@storybook/addon-jest": "^4.1.7",
+        "@storybook/addon-knobs": "^4.1.9",
         "@storybook/addon-options": "^4.1.7",
         "@storybook/addon-storyshots": "^4.1.6",
         "@storybook/react": "^4.1.6",
