--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
         "@storybook/addon-options": "^4.1.7",
         "@storybook/addon-storyshots": "^4.1.6",
         "@storybook/react": "^4.1.6",
+        "@types/react": "^16.8.13",
+        "@types/react-dom": "^16.8.3",
+        "awesome-typescript-loader": "^5.2.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "babel-jest": "^23.6.0",
@@ -66,6 +69,7 @@
         "react-dom": "^16.7.0",
         "react-test-renderer": "^16.7.0",
         "style-loader": "^0.23.1",
+        "typescript": "^3.4.2",
         "url-loader": "^1.1.2",
         "webpack": "^4.28.4",
         "webpack-cli": "^3.2.1",
