--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@storybook/addon-actions": "^5.0.10",
-        "@storybook/addon-info": "^5.0.10",
+        "@storybook/addon-info": "^5.0.11",
         "@storybook/addon-jest": "^5.0.10",
         "@storybook/addon-options": "^5.0.10",
-        "@storybook/addon-storyshots": "^5.0.10",
+        "@storybook/addon-storyshots": "^5.0.11",
         "@storybook/react": "^5.0.10",
+        "@storybook/theming": "^5.0.11",
         "@types/enzyme": "^3.9.1",
         "@types/jest": "^24.0.11",
         "@types/react": "^16.8.14",
@@ -83,12 +84,13 @@
         "webpack-merge": "^4.2.1"
     },
     "peerDependencies": {
-        "react": "^16.8.1"
+        "react": "^16.8.1",
+        "@equinor/fusion": "^0.1.3"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
     "dependencies": {
-        "@storybook/theming": "^5.0.10"
+        "@equinor/fusion": "^0.1.3"
     }
 }
