--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "declaration": true,
+        "importHelpers": true,
+        "module": "esnext",
+        "outDir": "lib",
+        "rootDir": "src",
+        "strict": true,
+        "target": "es2017",
+        "composite": false,
+        "moduleResolution": "node",
         "jsx": "react",
-        "allowSyntheticDefaultImports": true
     },
     "include": [
         "./src/**/*",
