--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
         "@storybook/addon-storyshots": "^5.0.11",
         "@storybook/react": "^5.0.10",
         "@storybook/theming": "^5.0.11",
+        "@types/classnames": "^2.2.7",
         "@types/enzyme": "^3.9.1",
         "@types/jest": "^24.0.11",
         "@types/react": "^16.8.14",
         "@types/react-dom": "^16.8.4",
+        "@types/react-router-dom": "^4.3.3",
+        "@types/storybook__react": "^4.0.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
