--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
         "declaration": true,
         "importHelpers": true,
         "module": "esnext",
-        "outDir": "lib",
+        "outDir": "dist",
         "rootDir": "src",
         "strict": true,
         "target": "es2017",
         "composite": false,
         "moduleResolution": "node",
         "jsx": "react",
+        "noImplicitAny": false
     },
     "include": [
         "./src/**/*",
