Add root and content + rewrite all to typescript :poop:

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "jsx": "react",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "rootDir": "../",
     },
     "include": [
         "../src/**/*",
