--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "importHelpers": true,
         "module": "esnext",
         "outDir": "dist",
-        "rootDir": "src",
+        "rootDir": "./src",
         "strict": true,
         "target": "es2017",
         "composite": false,
@@ -15,6 +15,9 @@
     },
     "include": [
         "./src/**/*",
-        "./css-modules.d.ts"
+        "./css-modules.d.ts",
+    ],
+    "exclude": [
+        "./src/**/*.stories.*"
     ]
 }
