--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "endOfLine": "crlf",
-  "parser": "flow",
+  "parser": "typescript",
   "tabWidth": 4
 }
