--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
         "@storybook/addon-actions": "^5.0.10",
         "@storybook/addon-info": "^5.0.11",
         "@storybook/addon-jest": "^5.0.10",
+        "@storybook/addon-knobs": "^5.0.11",
         "@storybook/addon-options": "^5.0.10",
         "@storybook/addon-storyshots": "^5.0.11",
+        "@storybook/addon-viewport": "^5.0.11",
         "@storybook/react": "^5.0.10",
         "@storybook/theming": "^5.0.11",
         "@types/classnames": "^2.2.7",
