--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@storybook/addon-actions": "^5.0.10",
-        "@storybook/addon-info": "^5.0.11",
+        "@storybook/addon-info": "^5.1.3",
         "@storybook/addon-jest": "^5.0.10",
+        "@storybook/addon-knobs": "^5.0.11",
         "@storybook/addon-options": "^5.0.10",
-        "@storybook/addon-storyshots": "^5.0.11",
+        "@storybook/addon-storyshots": "^5.1.3",
         "@storybook/react": "^5.0.10",
         "@storybook/theming": "^5.0.11",
         "@types/classnames": "^2.2.7",
@@ -79,6 +80,8 @@
         "react-test-renderer": "^16.8.6",
         "style-loader": "^0.23.1",
         "ts-jest": "^24.0.2",
+        "tslint": "^5.17.0",
+        "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.4.5",
         "url-loader": "^1.1.2",
         "webpack": "^4.30.0",
