--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "module": "esnext",
         "outDir": "dist",
         "rootDir": "./src",
+        "baseUrl": "./src",
         "strict": true,
         "target": "es2017",
         "composite": false,
