--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "test": "jest",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
@@ -88,13 +89,13 @@
     },
     "peerDependencies": {
         "react": "^16.8.1",
-        "@equinor/fusion": "^0.1.28"
+        "@equinor/fusion": "^0.1.38"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
     "dependencies": {
-        "@equinor/fusion": "^0.1.34"
+        "@equinor/fusion": "^0.1.38"
     },
     "files": [
         "/dist"
