--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -95,7 +95,8 @@
         "babel-core": "7.0.0-bridge.0"
     },
     "dependencies": {
-        "@equinor/fusion": "^0.1.41"
+        "@equinor/fusion": "^0.1.41",
+        "react-router-dom": "^5.0.1"
     },
     "files": [
         "/dist"
