--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.13",
+    "version": "0.0.14",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -85,19 +85,22 @@
         "url-loader": "^1.1.2",
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.1",
-        "webpack-merge": "^4.2.1"
+        "webpack-merge": "^4.2.1",
+        "@equinor/fusion": "^0.1.41",
+        "react-router-dom": "^5.0.1",
+        "history": "^4.9.0"
     },
     "peerDependencies": {
         "react": "^16.8.1",
         "@equinor/fusion": "^0.1.39",
-        "react-router-dom": "^5.0.1"
+        "react-router-dom": "^5.0.1",
+        "history": "^4.9.0"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
     "dependencies": {
-        "@equinor/fusion": "^0.1.41",
-        "react-router-dom": "^5.0.1"
+        
     },
     "files": [
         "/dist"
