--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.16",
+    "version": "0.0.17",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -32,6 +32,7 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
+        "@equinor/fusion": "^0.1.49",
         "@storybook/addon-actions": "^5.0.10",
         "@storybook/addon-info": "^5.1.9",
         "@storybook/addon-jest": "^5.0.10",
@@ -68,6 +69,7 @@
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "7.12.4",
         "file-loader": "^3.0.1",
+        "history": "^4.9.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^24.7.1",
         "jsdom": "^15.0.0",
@@ -78,6 +80,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
         "react-test-renderer": "^16.8.6",
         "style-loader": "^0.23.1",
         "ts-jest": "^24.0.2",
@@ -85,14 +88,11 @@
         "url-loader": "^1.1.2",
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.1",
-        "webpack-merge": "^4.2.1",
-        "@equinor/fusion": "^0.1.41",
-        "react-router-dom": "^5.0.1",
-        "history": "^4.9.0"
+        "webpack-merge": "^4.2.1"
     },
     "peerDependencies": {
         "react": "^16.8.1",
-        "@equinor/fusion": "^0.1.39",
+        "@equinor/fusion": "^0.1.49",
         "react-router-dom": "^5.0.1",
         "history": "^4.9.0"
     },
