--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.17",
+    "version": "0.0.18",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -8,6 +8,7 @@
         "test": "jest",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
         "storybook": "start-storybook -p 9001 -c .storybook",
+        "start": "start-storybook -p 9001 -c .storybook",
         "build:storybook": "build-storybook -c .storybook -o ./docs",
         "prepublish": "yarn test"
     },
@@ -32,7 +33,7 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@equinor/fusion": "^0.1.49",
+        "@equinor/fusion": "^0.1.53",
         "@storybook/addon-actions": "^5.0.10",
         "@storybook/addon-info": "^5.1.9",
         "@storybook/addon-jest": "^5.0.10",
@@ -92,7 +93,7 @@
     },
     "peerDependencies": {
         "react": "^16.8.1",
-        "@equinor/fusion": "^0.1.49",
+        "@equinor/fusion": "^0.1.53",
         "react-router-dom": "^5.0.1",
         "history": "^4.9.0"
     },
