The initial data table

--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@equinor/fusion": "^0.1.53",
-        "@storybook/addon-actions": "^5.0.10",
+        "@equinor/fusion": "^0.1.82",
+        "@storybook/addon-actions": "^5.1.9",
         "@storybook/addon-info": "^5.1.9",
-        "@storybook/addon-jest": "^5.0.10",
-        "@storybook/addon-knobs": "^5.0.11",
-        "@storybook/addon-options": "^5.0.10",
+        "@storybook/addon-jest": "^5.1.9",
+        "@storybook/addon-knobs": "^5.1.9",
+        "@storybook/addon-options": "^5.1.9",
         "@storybook/addon-storyshots": "^5.1.9",
-        "@storybook/addon-viewport": "^5.0.11",
-        "@storybook/react": "^5.0.10",
-        "@storybook/theming": "^5.0.11",
+        "@storybook/addon-viewport": "^5.1.9",
+        "@storybook/react": "^5.1.9",
+        "@storybook/theming": "^5.1.9",
         "@types/classnames": "^2.2.7",
         "@types/enzyme": "^3.9.1",
         "@types/jest": "^24.0.11",
@@ -78,6 +78,7 @@
         "less-loader": "^4.1.0",
         "prettier": "^1.17.0",
         "prettier-loader": "^2.1.1",
+        "prettier-stylelint": "^0.4.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -93,7 +94,7 @@
     },
     "peerDependencies": {
         "react": "^16.8.1",
-        "@equinor/fusion": "^0.1.53",
+        "@equinor/fusion": "^0.1.66",
         "react-router-dom": "^5.0.1",
         "history": "^4.9.0"
     },
