--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,15 @@
   "trailingComma": "es5",
   "endOfLine": "crlf",
   "parser": "typescript",
-  "tabWidth": 4
+  "tabWidth": 4,
+  "stylelint": {
+    "extends": [
+        "stylelint-config-idiomatic-order",
+        "./node_modules/prettier-stylelint/config.js"
+    ],
+    "rules": {
+        "indentation": 4,
+        "string-quotes": "single"
+    }
+}
 }
