--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "0.0.32",
+    "version": "0.0.33",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -10,7 +10,10 @@
         "storybook": "start-storybook -p 9001 -c .storybook",
         "start": "start-storybook -p 9001 -c .storybook",
         "build:storybook": "build-storybook -c .storybook -o ./docs",
-        "prepublish": "yarn test"
+        "prepublish": "yarn test",
+        "prebuild": "rm -rf dist",
+        "build": "webpack",
+        "postbuild": "tsc --emitDeclarationOnly true"
     },
     "repository": {
         "type": "git",
