Started with drop down implementation and tslinf related fixes

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -3,6 +3,10 @@
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
         "rootDir": "../",
+        "baseUrl": "../",
+        "paths": {
+            "@equinor/fusion-components": ["./src/index"]
+        }
     },
     "include": [
         "../src/**/*",
