--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,8 +1,21 @@
 {
     "compilerOptions": {
-        "jsx": "react",
         "allowSyntheticDefaultImports": true,
+        "declaration": true,
+        "importHelpers": true,
+        "module": "esnext",
+        "outDir": "dist",
+        "strict": true,
+        "target": "es2017",
+        "composite": false,
+        "moduleResolution": "node",
+        "jsx": "react",
+        "noImplicitAny": false,
         "rootDir": "../",
+        "baseUrl": "../",
+        "paths": {
+            "@equinor/fusion-components": ["./src/index.ts"]
+        }
     },
     "include": [
         "../src/**/*",
