--- a/package.json
+++ b/package.json
@@ -105,9 +105,7 @@
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
-    "dependencies": {
-        "tinycolor2": "^1.4.1"
-    },
+    "dependencies": {},
     "files": [
         "/dist"
     ]
