--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "jsdom": "^15.0.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
+        "marked": "^0.7.0",
         "prettier": "^1.17.0",
         "prettier-loader": "^2.1.1",
         "prettier-stylelint": "^0.4.2",
