--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@babel/preset-typescript": "^7.3.3",
         "@equinor/fusion": "^1.0.5",
         "@storybook/addon-actions": "^5.2.5",
-        "@storybook/addon-info": "^5.2.6",
+        "@storybook/addon-info": "^5.3.7",
         "@storybook/addon-jest": "^5.2.5",
         "@storybook/addon-knobs": "^5.2.5",
         "@storybook/addon-options": "^5.2.5",
@@ -53,12 +53,12 @@
         "@types/react-router-dom": "^4.3.3",
         "@types/storybook__react": "^4.0.2",
         "@types/tinycolor2": "^1.4.2",
-        "awesome-typescript-loader": "^5.2.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "babel-jest": "^24.7.1",
         "babel-loader": "^8.0.5",
         "babel-plugin-require-context-hook": "^1.0.0",
+        "cache-loader": "^4.1.0",
         "classnames": "^2.2.6",
         "css-loader": "^2.1.1",
         "enzyme": "^3.9.0",
@@ -73,6 +73,7 @@
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "7.12.4",
         "file-loader": "^3.0.1",
+        "fork-ts-checker-webpack-plugin": "^4.0.1",
         "history": "^4.9.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^24.7.1",
@@ -80,8 +81,8 @@
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "marked": "^0.7.0",
-        "prettier": "^1.17.0",
-        "prettier-loader": "^2.1.1",
+        "prettier": "^1.19.1",
+        "prettier-loader": "^3.3.0",
         "prettier-stylelint": "^0.4.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
@@ -89,8 +90,10 @@
         "react-router-dom": "^5.0.1",
         "react-test-renderer": "^16.8.6",
         "style-loader": "^0.23.1",
+        "thread-loader": "^2.1.3",
         "ts-jest": "^24.0.2",
-        "typescript": "^3.7.3",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.7.5",
         "url-loader": "^1.1.2",
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.1",
