--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "marked": "^0.7.0",
+        "powerbi-client": "^2.8.0",
         "prettier": "^1.19.1",
         "prettier-loader": "^3.3.0",
         "prettier-stylelint": "^0.4.2",
@@ -103,12 +104,12 @@
         "react": "^16.8.1",
         "@equinor/fusion": "^0.3.4",
         "react-router-dom": "^5.0.1",
-        "history": "^4.9.0"
+        "history": "^4.9.0",
+        "powerbi-client": "^2.8.0"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
-    "dependencies": {},
     "files": [
         "/dist"
     ]
