--- a/package.json
+++ b/package.json
@@ -35,24 +35,26 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@equinor/fusion": "^1.0.9",
-        "@storybook/addon-actions": "^5.2.5",
-        "@storybook/addon-info": "^5.3.7",
-        "@storybook/addon-jest": "^5.2.5",
-        "@storybook/addon-knobs": "^5.2.5",
-        "@storybook/addon-options": "^5.2.5",
-        "@storybook/addon-storyshots": "^5.2.5",
-        "@storybook/addon-viewport": "^5.2.5",
-        "@storybook/react": "^5.2.5",
-        "@storybook/theming": "^5.2.5",
+        "@equinor/fusion": "^1.0.14",
+        "@storybook/addon-actions": "^5.3.10",
+        "@storybook/addon-jest": "^5.3.10",
+        "@storybook/addon-knobs": "^5.3.10",
+        "@storybook/addon-options": "^5.3.10",
+        "@storybook/addon-storyshots": "^5.3.10",
+        "@storybook/addon-viewport": "^5.3.10",
+        "@storybook/react": "^5.3.10",
+        "@storybook/theming": "^5.3.10",
         "@types/classnames": "^2.2.7",
         "@types/enzyme": "^3.9.1",
+        "@types/history": "^4.7.5",
         "@types/jest": "^24.0.11",
-        "@types/react": "^16.8.14",
+        "@types/react": "^16.9.0",
         "@types/react-dom": "^16.8.4",
-        "@types/react-router-dom": "^4.3.3",
+        "@types/react-router": "^5.1.4",
+        "@types/react-router-dom": "^4.3.5",
         "@types/storybook__react": "^4.0.2",
         "@types/tinycolor2": "^1.4.2",
+        "@types/uuid": "^3.4.7",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "babel-jest": "^24.7.1",
@@ -85,7 +87,7 @@
         "prettier-loader": "^3.3.0",
         "prettier-stylelint": "^0.4.2",
         "prop-types": "^15.7.2",
-        "react": "^16.8.6",
+        "react": "^16.9.0",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
         "react-test-renderer": "^16.8.6",
@@ -95,20 +97,20 @@
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.5",
         "url-loader": "^1.1.2",
+        "uuid": "^3.4.0",
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.1",
         "webpack-merge": "^4.2.1"
     },
     "peerDependencies": {
         "react": "^16.8.1",
-        "@equinor/fusion": "^0.3.4",
+        "@equinor/fusion": "^1.0.14",
         "react-router-dom": "^5.0.1",
         "history": "^4.9.0"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
-    "dependencies": {},
     "files": [
         "/dist"
     ]
