--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "marked": "^0.7.0",
+        "powerbi-client": "^2.8.0",
         "prettier": "^1.19.1",
         "prettier-loader": "^3.3.0",
         "prettier-stylelint": "^0.4.2",
@@ -106,7 +107,8 @@
         "react": "^16.8.1",
         "@equinor/fusion": "^1.0.16",
         "react-router-dom": "^5.0.1",
-        "history": "^4.9.0"
+        "history": "^4.9.0",
+        "powerbi-client": "^2.8.0"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
