Fixed merge issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "@equinor/fusion-components",
+    "version": "1.1.19",
+    "description": "Common react components used by fusion core and fusion apps",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "scripts": {
         "test": "jest",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
         "storybook": "start-storybook -p 9001 -c .storybook",
