--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@types/storybook__react": "^5.2.1",
         "@types/tinycolor2": "^1.4.2",
         "@types/uuid": "^3.4.7",
+        "adaptivecards": "^1.2.5",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "babel-jest": "^25.1.0",
