--- a/package.json
+++ b/package.json
@@ -103,16 +103,14 @@
         "uuid": "^3.4.0",
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.1",
-        "webpack-merge": "^4.2.1",
-        "pixi.js": "^5.2.4"
+        "webpack-merge": "^4.2.1"
     },
     "peerDependencies": {
         "react": "^16.8.1",
         "@equinor/fusion": "^1.0.16",
         "react-router-dom": "^5.0.1",
         "history": "^4.9.0",
-        "powerbi-client": "^2.8.0",
-        "pixi.js": "^5.2.4"
+        "powerbi-client": "^2.8.0"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
