WIP: add custom element for person

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "target": "es2017",
         "composite": false,
         "moduleResolution": "node",
+        "experimentalDecorators": true,
         "jsx": "react",
         "noImplicitAny": false,
         "paths": {
