--- a/package.json
+++ b/package.json
@@ -117,5 +117,9 @@
     },
     "files": [
         "/dist"
-    ]
+    ],
+    "dependencies": {
+        "lit-element": "^2.3.1",
+        "lit-html": "^1.2.1"
+    }
 }
