Get jest working again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,8 @@ jobs:
     - name: Build
       run: | 
         npm run build
+    - name: Test
+      run: | 
+        npm test
       env:
         CI: true
