--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@equinor/fusion": "^2.0.14",
+        "@equinor/fusion": "^2.0.15",
         "@storybook/addon-actions": "^5.3.10",
         "@storybook/addon-jest": "^5.3.10",
         "@storybook/addon-knobs": "^5.3.10",
@@ -61,6 +61,7 @@
         "babel-jest": "^26.0.1",
         "babel-loader": "^8.0.5",
         "babel-plugin-require-context-hook": "^1.0.0",
+        "babel-polyfill": "^6.26.0",
         "cache-loader": "^4.1.0",
         "classnames": "^2.2.6",
         "css-loader": "^3.4.2",
@@ -80,6 +81,7 @@
         "fork-ts-checker-webpack-plugin": "^4.0.1",
         "history": "^4.9.0",
         "identity-obj-proxy": "^3.0.0",
+        "immutable": "^4.0.0-rc.12",
         "jest": "^25.1.0",
         "jsdom": "^16.2.0",
         "less": "^3.9.0",
