--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "/dist"
     ],
     "dependencies": {
+        "date-fns": "^2.14.0",
         "prosemirror-commands": "^1.1.4",
         "prosemirror-history": "^1.1.3",
         "prosemirror-inputrules": "^1.1.2",
