--- a/package.json
+++ b/package.json
@@ -1,121 +1,121 @@
 {
-    "name": "@equinor/fusion-components",
-    "version": "1.1.101",
-    "description": "Common react components used by fusion core and fusion apps",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "scripts": {
-        "test": "jest",
-        "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
-        "storybook": "start-storybook -p 9001 -c .storybook",
-        "start": "start-storybook -p 9001 -c .storybook",
-        "build:storybook": "build-storybook -c .storybook -o ./docs",
-        "prebuild": "rm -rf dist",
-        "build": "webpack",
-        "postbuild": "tsc --emitDeclarationOnly true"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/equinor/fusion-components.git"
-    },
-    "keywords": [
-        "fusion",
-        "react",
-        "components"
-    ],
-    "author": "Fusion Core",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/equinor/fusion-components/issues"
-    },
-    "homepage": "https://github.com/equinor/fusion-components#readme",
-    "devDependencies": {
-        "@babel/core": "^7.4.3",
-        "@babel/plugin-proposal-class-properties": "^7.4.0",
-        "@babel/preset-env": "^7.4.3",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.3.3",
-        "@equinor/fusion": "^2.1.0",
-        "@storybook/addon-actions": "^5.3.10",
-        "@storybook/addon-jest": "^5.3.10",
-        "@storybook/addon-knobs": "^5.3.10",
-        "@storybook/addon-options": "^5.3.10",
-        "@storybook/addon-storyshots": "^5.3.13",
-        "@storybook/addon-viewport": "^5.3.10",
-        "@storybook/react": "^5.3.10",
-        "@storybook/theming": "^5.3.12",
-        "@types/classnames": "^2.2.7",
-        "@types/enzyme": "^3.9.1",
-        "@types/history": "^4.7.5",
-        "@types/jest": "^26.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-router": "^5.1.4",
-        "@types/react-router-dom": "^4.3.5",
-        "@types/storybook__react": "^5.2.1",
-        "@types/tinycolor2": "^1.4.2",
-        "@types/uuid": "^3.4.7",
-        "adaptivecards": "^1.2.5",
-        "babel-core": "7.0.0-bridge.0",
-        "babel-eslint": "^10.0.1",
-        "babel-jest": "^26.0.1",
-        "babel-loader": "^8.0.5",
-        "babel-plugin-require-context-hook": "^1.0.0",
-        "cache-loader": "^4.1.0",
-        "classnames": "^2.2.6",
-        "css-loader": "^3.4.2",
-        "dompurify": "^2.0.8",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.12.1",
-        "eslint": "5.16.0",
-        "eslint-config-airbnb": "17.1.1",
-        "eslint-config-prettier": "^6.10.0",
-        "eslint-import-resolver-webpack": "^0.12.1",
-        "eslint-loader": "^3.0.3",
-        "eslint-plugin-import": "2.22.0",
-        "eslint-plugin-jsx-a11y": "6.3.1",
-        "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "7.20.3",
-        "file-loader": "^6.0.0",
-        "fork-ts-checker-webpack-plugin": "^4.0.1",
-        "history": "^4.9.0",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^25.1.0",
-        "jsdom": "^16.2.0",
-        "less": "^3.9.0",
-        "less-loader": "^6.1.0",
-        "marked": "^1.0.0",
-        "powerbi-client": "^2.8.0",
-        "prettier": "^2.0.2",
-        "prettier-loader": "^3.3.0",
-        "prettier-stylelint": "^0.4.2",
-        "prop-types": "^15.7.2",
-        "react": "^16.9.0",
-        "react-dom": "^16.8.6",
-        "react-router-dom": "^5.0.1",
-        "react-test-renderer": "^16.8.6",
-        "style-loader": "^1.1.3",
-        "thread-loader": "^2.1.3",
-        "ts-jest": "^25.1.0",
-        "ts-loader": "^7.0.0",
-        "typescript": "^3.7.3",
-        "url-loader": "^4.0.0",
-        "uuid": "^3.4.0",
-        "webpack": "^4.39.3",
-        "webpack-cli": "^3.3.11",
-        "webpack-merge": "^4.2.1"
-    },
-    "peerDependencies": {
-        "react": "^16.8.1",
-        "@equinor/fusion": "^1.0.16",
-        "react-router-dom": "^5.0.1",
-        "history": "^4.9.0",
-        "powerbi-client": "^2.8.0"
-    },
-    "resolutions": {
-        "babel-core": "7.0.0-bridge.0"
-    },
-    "files": [
-        "/dist"
-    ]
+  "name": "@equinor/fusion-components",
+  "version": "1.1.101",
+  "description": "Common react components used by fusion core and fusion apps",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "test": "jest",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "start": "start-storybook -p 9001 -c .storybook",
+    "build:storybook": "build-storybook -c .storybook -o ./docs",
+    "prebuild": "rm -rf dist",
+    "build": "webpack",
+    "postbuild": "tsc --emitDeclarationOnly true"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/equinor/fusion-components.git"
+  },
+  "keywords": [
+    "fusion",
+    "react",
+    "components"
+  ],
+  "author": "Fusion Core",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/equinor/fusion-components/issues"
+  },
+  "homepage": "https://github.com/equinor/fusion-components#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@equinor/fusion": "file:.yalc/@equinor/fusion",
+    "@storybook/addon-actions": "^5.3.10",
+    "@storybook/addon-jest": "^5.3.10",
+    "@storybook/addon-knobs": "^5.3.10",
+    "@storybook/addon-options": "^5.3.10",
+    "@storybook/addon-storyshots": "^5.3.13",
+    "@storybook/addon-viewport": "^5.3.10",
+    "@storybook/react": "^5.3.10",
+    "@storybook/theming": "^5.3.12",
+    "@types/classnames": "^2.2.7",
+    "@types/enzyme": "^3.9.1",
+    "@types/history": "^4.7.5",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/storybook__react": "^5.2.1",
+    "@types/tinycolor2": "^1.4.2",
+    "@types/uuid": "^3.4.7",
+    "adaptivecards": "^1.2.5",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "cache-loader": "^4.1.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^3.4.2",
+    "dompurify": "^2.0.8",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "7.20.3",
+    "file-loader": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.1",
+    "history": "^4.9.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "jsdom": "^16.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^6.1.0",
+    "marked": "^1.0.0",
+    "powerbi-client": "^2.8.0",
+    "prettier": "^2.0.2",
+    "prettier-loader": "^3.3.0",
+    "prettier-stylelint": "^0.4.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.8.6",
+    "style-loader": "^1.1.3",
+    "thread-loader": "^2.1.3",
+    "ts-jest": "^25.1.0",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.7.3",
+    "url-loader": "^4.0.0",
+    "uuid": "^3.4.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.1",
+    "@equinor/fusion": "^1.0.16",
+    "react-router-dom": "^5.0.1",
+    "history": "^4.9.0",
+    "powerbi-client": "^2.8.0"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
+  "files": [
+    "/dist"
+  ]
 }
