--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
         "jsdom": "^16.2.0",
         "less": "^3.9.0",
         "less-loader": "^6.1.0",
+        "lit-element": "^2.3.1",
+        "lit-html": "^1.2.1",
         "marked": "^1.0.0",
         "powerbi-client": "^2.8.0",
         "prettier": "^2.0.2",
@@ -117,5 +119,17 @@
     },
     "files": [
         "/dist"
-    ]
+    ],
+    "dependencies": {
+        "date-fns": "^2.14.0",
+        "prosemirror-commands": "^1.1.4",
+        "prosemirror-history": "^1.1.3",
+        "prosemirror-inputrules": "^1.1.2",
+        "prosemirror-keymap": "^1.1.4",
+        "prosemirror-markdown": "^1.4.5",
+        "prosemirror-schema-basic": "^1.1.2",
+        "prosemirror-schema-list": "^1.1.2",
+        "prosemirror-state": "^1.3.3",
+        "prosemirror-view": "^1.14.13"
+    }
 }
