--- a/package.json
+++ b/package.json
@@ -108,9 +108,9 @@
         "webpack-merge": "^4.2.1"
     },
     "peerDependencies": {
-        "react": "^16.8.1",
-        "@equinor/fusion": "^1.0.16",
-        "react-router-dom": "^5.0.1",
+        "react": "^16.13.x",
+        "@equinor/fusion": "2.2.x",
+        "react-router-dom": "5.x",
         "history": "^4.9.0",
         "powerbi-client": "^2.8.0"
     },
