--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -20,16 +20,25 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        registry-url: 'https://registry.npmjs.org'
     - name: npm install 
       run: |
         npm ci
     - name: Build
       run: | 
         npm run build
-    - name: npm publish
+    - name: npm publish release
+      if: "!github.event.release.prerelease"
       run: | 
-        npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
         npm publish --access public
+      env:
+        CI: true
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+    # @TODO use action for tag
+    - name: npm publish release
+      if: "github.event.release.prerelease"
+      run: | 
+        npm publish --tag next --access public
       env:
         CI: true
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
