--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@babel/preset-typescript": "^7.3.3",
         "@equinor/fusion": "^2.1.10",
         "@storybook/addon-actions": "^6.0.21",
+        "@storybook/addon-docs": "^6.0.21",
         "@storybook/addon-jest": "^6.0.21",
         "@storybook/addon-knobs": "^6.0.21",
         "@storybook/addon-options": "^5.3.21",
@@ -95,6 +96,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-is": "^16.13.1",
         "react-router-dom": "^5.0.1",
         "react-test-renderer": "^16.8.6",
         "style-loader": "^1.1.3",
