--- a/package.json
+++ b/package.json
@@ -124,8 +124,13 @@
         "/dist"
     ],
     "dependencies": {
+        "@types/lodash.throttle": "^4.1.6",
+        "@types/prosemirror-model": "^1.7.3",
+        "@types/prosemirror-state": "^1.2.5",
+        "@types/prosemirror-view": "^1.15.1",
         "@webcomponents/custom-elements": "^1.4.2",
         "date-fns": "^2.14.0",
+        "lodash.throttle": "^4.1.1",
         "prosemirror-commands": "^1.1.4",
         "prosemirror-history": "^1.1.3",
         "prosemirror-inputrules": "^1.1.2",
