--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "node": true
   },
   "rules": {
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    
     "prettier/prettier": ["error"],
     "linebreak-style": 0,
     
