--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   },
   "homepage": "https://github.com/equinor/fusion-components#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.3.3",
     "@equinor/fusion": "^2.4.5",
     "@storybook/addon-actions": "^6.0.21",
@@ -87,16 +87,16 @@
     "jsdom": "^16.2.0",
     "less": "^3.9.0",
     "less-loader": "^6.1.0",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
     "marked": "^1.0.0",
     "powerbi-client": "^2.14.1",
     "prettier": "^2.0.2",
     "prettier-loader": "^3.3.0",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
@@ -112,7 +112,7 @@
     "webpack-merge": "^4.2.1"
   },
   "peerDependencies": {
-    "react": "^16.13.x",
+    "react": "^17.0.x",
     "@equinor/fusion": "2.2.x",
     "react-router-dom": "5.x",
     "history": "^4.9.0",
@@ -125,6 +125,7 @@
     "/dist"
   ],
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@types/lodash.throttle": "^4.1.6",
     "@types/prosemirror-model": "^1.7.3",
     "@types/prosemirror-state": "^1.2.5",
