--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@equinor/fusion-components",
-  "version": "1.4.17-pr-850.0",
+  "version": "1.4.16",
   "description": "Common react components used by fusion core and fusion apps",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
