feat:HangingGarden component (#602)
New Component Hanging Garden. 
A component that give you the possibility to create a hanging gardin by supplying it instructions on how you want the garden to look. 
without having to worry about the complexity of rendering and the pixi.js library. 

With that said, this is a fairly complex component to implement. 
There are quite a few paramters that need to be filled out. 
The documentation for this is lacking for this release, but is being worked on.

--- a/package.json
+++ b/package.json
@@ -109,14 +109,16 @@
     "uuid": "^3.4.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "pixi.js": "^5.2.4"
   },
   "peerDependencies": {
     "react": "^16.13.x",
     "@equinor/fusion": "2.2.x",
     "react-router-dom": "5.x",
     "history": "^4.9.0",
-    "powerbi-client": "^2.8.0"
+    "powerbi-client": "^2.8.0",
+    "pixi.js": "^5.2.4"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
