--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "npm run clear:storybook && start-storybook -p 9001 -c .storybook --no-dll",
     "build:storybook": "build-storybook -c .storybook -o ./docs",
     "prebuild": "rm -rf dist",
+    "preinstall": "npx npm-force-resolutions",
     "build": "webpack",
     "postbuild": "tsc --emitDeclarationOnly true",
     "docker:build": "DOCKER_BUILDKIT=1 docker build -o dist .",
@@ -63,7 +64,7 @@
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
     "adaptivecards": "^2.5.0",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
@@ -109,7 +110,7 @@
     "thread-loader": "^3.0.1",
     "ts-jest": "^26.4.3",
     "ts-loader": "^4.0.0-beta.0",
-    "typescript": "^4.1.2",
+    "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
     "webpack": "^4.44.2",
@@ -124,12 +125,14 @@
     "powerbi-client": "^2.14.1"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
+    "babel-core": "7.0.0-bridge.0",
+    "acorn": "8.0.1"
   },
   "files": [
     "/dist"
   ],
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@reach/router": "^1.3.4",
     "@storybook/addons": "^6.1.0-beta.2",
     "@types/lodash.throttle": "^4.1.6",
@@ -141,6 +144,7 @@
     "@webcomponents/custom-elements": "^1.4.3",
     "date-fns": "^2.16.1",
     "lodash.throttle": "^4.1.1",
+    "npm-force-resolutions": "0.0.3",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
