--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "target": "ESNext",
         "composite": false,
         "moduleResolution": "node",
-        "jsx": "react-jsx",
+        "jsx": "preserve",
         "noImplicitAny": false,
         "paths": {
             "@equinor/fusion-components": ["./src/index.ts"]
