--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "paths": {
             "@equinor/fusion-components": ["./src/index.ts"]
         },
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*",
