--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@equinor/fusion": "^2.4.12",
+    "@equinor/fusion": "^2.4.15-pbi.0",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-docs": "^6.0.21",
     "@storybook/addon-jest": "^6.0.21",
@@ -67,6 +67,7 @@
     "cache-loader": "^4.1.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
+    "deepmerge": "^4.2.2",
     "dompurify": "^2.0.8",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -134,6 +135,8 @@
     "@webcomponents/custom-elements": "^1.4.2",
     "date-fns": "^2.14.0",
     "lodash.throttle": "^4.1.1",
+    "powerbi-client-react": "^1.3.0",
+    "powerbi-models": "^1.7.0",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.2",
@@ -142,6 +145,8 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.2",
     "prosemirror-state": "^1.3.3",
-    "prosemirror-view": "^1.14.13"
+    "prosemirror-view": "^1.14.13",
+    "rxjs": "^6.6.3",
+    "typesafe-actions": "^5.1.0"
   }
 }
