fix: react import and storybook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
         "allowSyntheticDefaultImports": true,
         "declaration": true,
         "importHelpers": true,
-        "module": "ESNext",
+        "module": "ES6",
         "outDir": "dist",
         "rootDir": "src",
         "baseUrl": "./",
         "strict": false,
-        "target": "ESNext",
+        "target": "ES6",
         "composite": false,
         "moduleResolution": "node",
         "jsx": "react-jsx",
