--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "clear:storybook": "rm -rf node_modules/.cache/storybook",
-    "start": "npm run clear:storybook && start-storybook -p 9001 -c .storybook --no-dll",
+    "start": "npm run clear:storybook && start-storybook -p 9001",
     "build:storybook": "build-storybook -c .storybook -o ./docs",
     "prebuild": "rm -rf dist",
     "build": "webpack",
@@ -34,70 +34,71 @@
   },
   "homepage": "https://github.com/equinor/fusion-components#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@equinor/fusion": "^3.0.1",
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-docs": "^6.0.28",
-    "@storybook/addon-essentials": "^6.1.0-beta.2",
-    "@storybook/addon-jest": "^6.0.28",
-    "@storybook/addon-knobs": "^6.0.28",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-docs": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-jest": "^6.1.17",
+    "@storybook/addon-knobs": "^6.1.17",
     "@storybook/addon-options": "^5.3.21",
-    "@storybook/addon-storyshots": "^6.0.28",
-    "@storybook/addon-viewport": "^6.0.28",
-    "@storybook/react": "^6.1.0-beta.2",
-    "@storybook/theming": "^6.1.0-beta.2",
+    "@storybook/addon-storyshots": "^6.1.17",
+    "@storybook/addon-viewport": "^6.1.17",
+    "@storybook/react": "^6.1.17",
+    "@storybook/theming": "^6.1.17",
     "@types/classnames": "^2.2.11",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/storybook__react": "^5.2.1",
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
-    "adaptivecards": "^2.5.0",
+    "adaptivecards": "^2.7.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "cache-loader": "^4.1.0",
     "classnames": "^2.2.6",
-    "css-loader": "^3.6.0",
-    "dompurify": "^2.2.2",
+    "css-loader": "^5.0.2",
+    "dompurify": "^2.2.6",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "7.12.1",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "^6.15.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.1",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "history": "^4.10.1",
+    "html-webpack-plugin": "^5.0.0-beta.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
-    "less": "^3.12.2",
-    "less-loader": "^6.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
     "marked": "^1.2.2",
     "powerbi-client": "^2.14.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "prettier-loader": "^3.3.0",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.7.2",
@@ -106,15 +107,15 @@
     "react-is": "^17.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^17.0.1",
-    "style-loader": "^1.1.3",
+    "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^4.0.0-beta.0",
+    "ts-jest": "^26.5.0",
+    "ts-loader": "^8.0.16",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
-    "uuid": "^8.3.1",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
+    "uuid": "^8.3.2",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
     "webpack-merge": "^5.7.3"
   },
   "peerDependencies": {
@@ -123,7 +124,7 @@
     "react-router-dom": "5.x",
     "history": "^4.9.0",
     "powerbi-client": "^2.14.1",
-    "pixi.js-legacy": "^5.3.3"
+    "pixi.js-legacy": "^5.3.7"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
@@ -132,29 +133,30 @@
     "/dist"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
     "@reach/router": "^1.3.4",
-    "@storybook/addons": "^6.1.0-beta.2",
+    "@storybook/addons": "^6.1.17",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/prosemirror-model": "^1.11.0",
-    "@types/prosemirror-state": "^1.2.5",
-    "@types/prosemirror-view": "^1.16.1",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@types/prosemirror-model": "^1.11.2",
+    "@types/prosemirror-state": "^1.2.6",
+    "@types/prosemirror-view": "^1.17.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "@webcomponents/custom-elements": "^1.4.3",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.17.0",
+    "loader-utils": "^2.0.0",
     "lodash.throttle": "^4.1.1",
     "npm-force-resolutions": "0.0.3",
-    "pixi.js-legacy": "^5.3.3",
-    "prosemirror-commands": "^1.1.4",
+    "pixi.js-legacy": "^5.3.7",
+    "prosemirror-commands": "^1.1.5",
     "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
-    "prosemirror-markdown": "^1.5.0",
+    "prosemirror-markdown": "^1.5.1",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.4",
-    "prosemirror-state": "^1.3.3",
-    "prosemirror-view": "^1.16.1",
-    "storybook": "^6.1.0-beta.2"
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.17.5",
+    "storybook": "^6.1.17"
   }
 }
