--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "@webcomponents/custom-elements": "^1.4.3",
+    "clsx": "^1.1.1",
     "date-fns": "^2.17.0",
     "loader-utils": "^2.0.0",
     "lodash.throttle": "^4.1.1",
@@ -156,6 +157,7 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
-    "prosemirror-view": "^1.17.5"
+    "prosemirror-view": "^1.17.5",
+    "rxjs": "^7.0.0"
   }
 }
