build: exclude react-styles from build

--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "webpack-merge": "^5.7.3"
     },
     "peerDependencies": {
+        "@equinor/fusion-react-styles": "^3.2.4",
         "@equinor/fusion": "^3.2.4",
         "history": "^4.9.0",
         "pixi.js-legacy": "^5.3.7",
