build: enfore node 12

--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -11,6 +11,10 @@ jobs:
   publish:
     name: Publish to PR
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+        
     steps:
 
       - name: Checkout project
