Feature/power bi component (#1224)
* fix: check if inner error exists

* 1.4.25-1

* feat: enhance power bi component

WIP: need more testing

* filter props removed and replaced with config.
filters can be added to the config with filters. Functionality remains the same.
config allows to set additional configuration to the report on load. example set a specific report page.
PowerBIReportErrorBoundary spelling corrected.
PowerBiBookmark updated to use modern bookmakrt
PowerBIReportView no does not check for accessToken before loading PowerBIEmbed.
This way the embed will use bootstrap functionlity and start loading the report before access is granted, giving shorter load times.
The acutal report and data will not load until the token is in place.

* fix: check if inner error exists

* 1.4.25-1

* feat: enhance power bi component

WIP: need more testing

* filter props removed and replaced with config.
filters can be added to the config with filters. Functionality remains the same.
config allows to set additional configuration to the report on load. example set a specific report page.
PowerBIReportErrorBoundary spelling corrected.
PowerBiBookmark updated to use modern bookmakrt
PowerBIReportView no does not check for accessToken before loading PowerBIEmbed.
This way the embed will use bootstrap functionlity and start loading the report before access is granted, giving shorter load times.
The acutal report and data will not load until the token is in place.

* revert change in PowerBIReport, that was merged wrong when rebasing

* added package-json from master and isntalled powerbi-client-react

* Added in missing error handling for PowerBIReportInfo.
Moved files that belonged to the store / epic to its own folder.
Removed various console.logs

* Removed all default React imports and use of React.* .
Removed unused imports.

* rebuild package-lock

* new rebuild off package-json.

* try this again.....

* added pretti

--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -11,6 +11,10 @@ jobs:
   publish:
     name: Publish to PR
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+        
     steps:
 
       - name: Checkout project
@@ -40,6 +44,10 @@ jobs:
         run: npm version prerelease --preid=${{ github.event.inputs.tag }}
         env:
           GH_TOKEN: ${{ github.token }}
+
+      - name: Push version
+        run: git push
+        continue-on-error: true
 
       - name: Release packages
         run: npm publish --tag ${{ github.event.inputs.tag }} --access public
