feat: pmt indication on position card

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "@babel/preset-env": "^7.14.5",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.12.13",
-        "@equinor/fusion": "^3.4.10",
+        "@equinor/fusion": "^3.4.14",
         "@storybook/addon-actions": "^6.1.17",
         "@storybook/addon-docs": "^6.1.21",
         "@storybook/addon-essentials": "^6.1.21",
@@ -131,6 +131,7 @@
         "/dist"
     ],
     "dependencies": {
+        "@equinor/fusion-components": "file:.yalc/@equinor/fusion-components",
         "@equinor/fusion-observable": "^8.0.2",
         "@equinor/fusion-react-checkbox": "^0.5.15",
         "@equinor/fusion-react-divider": "^0.2.12",
