chore(deps): ending commas in prettierc, updating fusion packages

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "lit-html": "^1.3.0",
         "marked": "^4.0.10",
         "powerbi-client": "2.18.5",
+        "prettier": "^3.2.5",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -108,7 +109,7 @@
         "webpack-merge": "^5.7.3"
     },
     "peerDependencies": {
-        "@equinor/fusion": "^3.2.4",
+        "@equinor/fusion": "^3.4.16",
         "history": "^4.9.0",
         "pixi.js-legacy": "^5.3.7",
         "powerbi-client": "^2.18.5",
@@ -123,12 +124,12 @@
     ],
     "dependencies": {
         "@equinor/eslint-config-fusion": "^2.2.0",
-        "@equinor/fusion-observable": "^8.0.2",
-        "@equinor/fusion-react-checkbox": "^0.5.15",
-        "@equinor/fusion-react-divider": "^0.2.12",
+        "@equinor/fusion-observable": "^8.2.0",
+        "@equinor/fusion-react-checkbox": "^0.5.17",
+        "@equinor/fusion-react-divider": "^0.2.13",
         "@equinor/fusion-react-icon": "^0.2.17",
-        "@equinor/fusion-react-styles": "^0.5.7",
-        "@equinor/fusion-wc-icon": "^2.1.0",
+        "@equinor/fusion-react-styles": "^0.5.11",
+        "@equinor/fusion-wc-icon": "^2.3.0",
         "@storybook/addon-jest": "^6.2.9",
         "@types/lodash.throttle": "^4.1.6",
         "@types/prosemirror-model": "^1.11.2",
